# pistonprotection

./: .gitignore  CONTRIBUTING.md  Makefile  PROMPT.md  README.md  docker-compose.yml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  docker.yml  helm-publish.yml  helm.yml  lint.yml  release.yml  security.yml
charts/pistonprotection/: Chart.yaml  values-development.yaml  values-minimal.yaml  values-production.yaml  values.yaml
charts/pistonprotection/templates/: _helpers.tpl  auth-deployment.yaml  configmaps.yaml  configmgr-deployment.yaml  frontend-deployment.yaml  gateway-deployment.yaml  grafana-dashboards.yaml  hpa.yaml  ingress.yaml  metrics-deployment.yaml  networkpolicies.yaml  pdb.yaml  prometheus-rules.yaml  secrets.yaml  servicemonitor.yaml
docker/auth/: Dockerfile
docker/config-mgr/: Dockerfile
docker/frontend/: Dockerfile
docker/gateway/: Dockerfile
docker/metrics/: Dockerfile
docker/operator/: Dockerfile
docker/worker/: Dockerfile
docs/: api.md  architecture.md  configuration.md  development.md  filters.md  installation.md  operations.md  user-guide.md
ebpf/: Cargo.toml
ebpf-tests/: Cargo.toml
ebpf-tests/src/: lib.rs  packet_generator.rs
ebpf-tests/tests/: http_tests.rs  minecraft_tests.rs  mod.rs  raknet_tests.rs  tcp_tests.rs  varint_tests.rs
ebpf/src/: lib.rs  xdp_filter.rs  xdp_http.rs  xdp_minecraft.rs  xdp_quic.rs  xdp_ratelimit.rs  xdp_tcp.rs  xdp_udp.rs
frontend/: .cta.json  biome.json  index.html  package.json  pnpm-lock.yaml  source.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/content/docs/: index.mdx  meta.json
frontend/content/docs/api/: authentication.mdx  backends.mdx  index.mdx  meta.json  rules.mdx
frontend/content/docs/configuration/: filters.mdx  gateway.mdx  index.mdx  meta.json  worker.mdx
frontend/content/docs/deployment/: bare-metal.mdx  docker.mdx  index.mdx  kubernetes.mdx  meta.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: app-sidebar.tsx
frontend/src/layouts/: AuthLayout.tsx  DashboardLayout.tsx
frontend/src/lib/: api.ts  auth-client.ts  auth.ts  utils.ts
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx
frontend/src/routes/docs/: $.tsx  (+1 more)
frontend/src/server/: server-utils.ts
frontend/src/styles/: globals.css
frontend/src/tests/: example.test.ts  formatting.test.ts  utils.test.ts  validation.test.ts
frontend/tests/: api-client.test.ts  auth-flow.test.tsx  components.test.tsx  setup.ts  test-utils.tsx
observability/grafana/dashboards/: attack-analysis.json  backend-health.json  traffic-overview.json  worker-status.json
observability/loki/: loki-config.yaml
observability/otel/: otel-collector-config.yaml
observability/prometheus/: prometheus.yml
observability/promtail/: promtail-config.yaml
operator/: Cargo.toml
operator/benches/: operator_benchmarks.rs
operator/src/: client.rs  crd.rs  error.rs  main.rs  metrics.rs  worker.rs
operator/src/controllers/: backend.rs  ddos_protection.rs  filter_rule.rs  ip_blocklist.rs  mod.rs
operator/src/tests/: controller_test.rs  crd_test.rs  grpc_client_test.rs  mod.rs  test_utils.rs
proto/: auth.proto  backend.proto  common.proto  filter.proto  metrics.proto  scoring.proto  worker.proto
scripts/: build-all.sh  build-ebpf.sh  init-db.sql  local-dev.sh  test-all.sh
services/: Cargo.toml
services/auth/: Cargo.toml
services/auth/benches/: auth_benchmarks.rs
services/auth/migrations/: 0001_initial.sql
services/auth/src/: config.rs  main.rs
services/common/: Cargo.toml
services/common/src/: config.rs  db.rs  error.rs  geoip.rs  ratelimit.rs  redis.rs  scoring.rs  telemetry.rs
services/config-mgr/benches/: config_mgr_benchmarks.rs
services/config-mgr/src/: config_store.rs  distributor.rs  handlers.rs  main.rs
services/gateway/: Cargo.toml
services/gateway/benches/: gateway_benchmarks.rs
services/gateway/migrations/: 0001_gateway_schema.sql  0002_alerts_table.sql
services/gateway/src/: main.rs
services/metrics/: Cargo.toml
services/metrics/benches/: metrics_benchmarks.rs
services/metrics/src/: aggregator.rs  alerts.rs  handlers.rs  main.rs  storage.rs  streams.rs
services/proto/: Cargo.toml  build.rs
services/worker/: Cargo.toml
services/worker/benches/: worker_benchmarks.rs
services/worker/src/: config_sync.rs  control_plane.rs  main.rs
tests/e2e/: Cargo.toml  full_flow_test.rs  kubernetes_test.rs  mod.rs  test_fixtures.rs
tests/integration/: Cargo.toml  api_test.rs  docker_compose_test.rs  mod.rs  service_communication_test.rs  test_helpers.rs
(+134 files in other folders)
