[package]
name = "pistonprotection-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "test-util"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Kubernetes
kube = { version = "0.92", features = ["runtime", "derive", "client", "rustls-tls"] }
k8s-openapi = { version = "0.22", features = ["latest"] }

# Command execution
which = "6.0"

[dev-dependencies]
serial_test = "3.0"
pretty_assertions = "1.4"
