[package]
name = "pistonprotection-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "test-util"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Docker compose runner (optional)
bollard = "0.17"
testcontainers = "0.21"

[dev-dependencies]
serial_test = "3.0"
pretty_assertions = "1.4"
